# trout

./: .clang-tidy  .codespellrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  REUSE.toml  cliff.toml  justfile
src/: ip_selector.cpp  passthrough.cpp  read_sim_file.cpp  rec_output_module.cpp
workflows/: ip_selector.jsonnet  passthrough.jsonnet
